simple-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-app-ingress
  namespace: zion
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "simple-app.ingress-domain.com"
    http:
      paths:
      - pathType: Prefix
        path: "/zion"
        backend:
          service:
            name: simple-app-first
            port:
              number: 80
  - host: "simple-app.ingress-domain.com"
    http:
      paths:
      - pathType: Prefix
        path: "/zion"
        backend:
          service:
            name: simple-app-second
            port:
              number: 80
